# superclip

./: Cargo.toml  README.md
src/: copy.rs  main.rs
