[package]
name = "superclip"
version = "0.1.0"
authors = ["Simon M. <git@simon.marache.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = "0.24.1"
clap = "2.33.0"
tempfile = "3.1.0"
byteorder = "1.3.2"
nix = "0.16.1"
simple_logger = "1.5.0"
log = "0.4.8"